# startup-researcher

./: .gitignore  Makefile  README.md  config.yaml  docs.md  main.py  pyproject.toml  startups.yaml
.cursor/context/: chainlit_docs_pack.md.txt  loguru_docs_pack.md.txt  mcp_docs_pack.md.txt  pydantic-settings.md.txt  pydantic_docs_pack.md.txt  rich_docs_pack.md.txt  tmp.md.txt
.cursor/rules/: configuration.mdc  data_models.mdc  data_science_agent.mdc  database.mdc  logging.mdc  project_overview.mdc  research_agent.mdc
.github/workflows/: ci.yaml
logs/: report.html
startup_researcher/: config.py  logging.py  models.py  utils.py
startup_researcher/agents/: data_agent.py  research_agent.py
tests/: test_config.py  test_logging.py
